--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Pixabay Gallery</string>
     <string name="search_hint">Your search here</string>
+    <string name="likes_count">Likes: %d</string>
 </resources>
